--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: white;
             overflow: hidden;
             touch-action: manipulation;
         }
@@ -55,11 +55,11 @@
 </head>
 <body>
     <div class="bell-container" id="bellContainer">
-        <img src="/mnt/user-data/uploads/deskbell.png" alt="Desk Bell" class="bell-image" id="bellImage">
+        <img src="deskbell.png" alt="Desk Bell" class="bell-image" id="bellImage">
     </div>
 
     <audio id="bellSound" preload="auto">
-        <source src="/mnt/user-data/uploads/deskbell.mp3" type="audio/mpeg">
+        <source src="counterbell.mp4a" type="audio/mp4">
     </audio>
 
     <script>
